name:                NeuroonRawStreamParsers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/NeuroonRawStreamParsers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -O3
  build-depends:       base >= 4.7 && < 5
                     , async
                     , binary
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , directory
                     , filepath
                     , stringsearch
                     , vector
                     , pipes
                     , pipes-bytestring
  default-language:    Haskell2010

  if flag(dump)
    ghc-options: -ddump-simpl -ddump-stg -ddump-to-file

executable NeuroonRawStreamParsers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N -ddump-simpl -ddump-to-file
  build-depends:       base
                     , NeuroonRawStreamParsers
  default-language:    Haskell2010



test-suite NeuroonRawStreamParsers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , NeuroonRawStreamParsers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/NeuroonRawStreamParsers
